Added conditional disabling of downloads with alert dialogues

--- a/NetworkProbabilityDownloader/WebContent/HTML/network_probability_downloader.html
+++ b/NetworkProbabilityDownloader/WebContent/HTML/network_probability_downloader.html
@@ -74,6 +74,7 @@
 
 
 <link rel="stylesheet" href="/NetworkProbabilityDownloader/css/np_downloader.css" media="all" />
+<link rel="stylesheet" href="/NetworkProbabilityDownloader/css/alert.css" media="all" />
 
    <!-- 
 <link rel="stylesheet" href="/NetworkProbabilityDownloader/css/menu.css" media="all" />
@@ -690,6 +691,13 @@ Pronouns: He/His
    </div>
 
 </div>    <!-- ends the div_download -->
+
+
+<div id="alertBox" >
+    <div class="message" id="alertBoxMessage"></div>
+    <button class="ok" id="button_alertOK">ok</button>
+</div>
+
 
 <div id="midb_footer">
 <hr>
