--- a/NetworkProbabilityDownloader/WebContent/HTML/network_probability_downloader.html
+++ b/NetworkProbabilityDownloader/WebContent/HTML/network_probability_downloader.html
@@ -48,6 +48,10 @@
 <meta name="MobileOptimized" content="width" />
 <meta name="HandheldFriendly" content="true" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
+
 <link rel="shortcut icon" href="https://midb.umn.edu/themes/custom/folwell/favicon.ico" type="image/vnd.microsoft.icon" />
 <link rel="revision" href="https://midb.umn.edu/welcome" />
 
@@ -198,7 +202,7 @@
        <img id="img_splashImage"  class="splashImage" alt="image not available" src="/NetworkProbabilityDownloader/images/midb_splash.png" height="500" width=100% style="object-fit: cover;">
    </div>
    <div id="div_overlayImage" style="position: absolute; z-index: 1;">
-      <img class="centerImageXX" title="Version: 0602.war" alt="image not available" src="/NetworkProbabilityDownloader/images/DCAN.png" height="75" width="75" style="position: relative; left: 0; top:0;">
+      <img class="centerImageXX" title="Version: 0621.war" alt="image not available" src="/NetworkProbabilityDownloader/images/DCAN.png" height="75" width="75" style="position: relative; left: 0; top:0;">
    </div>
    <div id="midb_atlases_text" style="position: absolute; z-index: 1; top:10px; right:16px">
             <h3 id="midb_header" style="color:white;">MIDB Probabilistic Atlases </h3> 
