--- a/NetworkProbabilityDownloader/WebContent/HTML/network_probability_downloader.html
+++ b/NetworkProbabilityDownloader/WebContent/HTML/network_probability_downloader.html
@@ -77,7 +77,7 @@
 <link href='https://fonts.googleapis.com/css?family=Amaranth:ital@1&display=swap' rel='stylesheet'>
 
 
-<link rel="stylesheet" href="/NetworkProbabilityDownloader/css/np_downloader.css" media="all" />
+<link rel="stylesheet" href="/NetworkProbabilityDownloader/css/np_downloader.css?id=.war_0726B_2021" media="all" />
 <link rel="stylesheet" href="/NetworkProbabilityDownloader/css/alert.css" media="all" />
 
    <!-- 
@@ -199,10 +199,10 @@
 
 <div  id="div_splashImageWrapper" style="position: relative;">
    <div id="div_splashImage" class="splashImage">
-       <img id="img_splashImage"  class="splashImage" alt="image not available" src="/NetworkProbabilityDownloader/images/brain_splash.png" height="300" width=100% style="object-fit: cover;">
+       <img id="img_splashImage"  class="splashImage" alt="image not available" src="/NetworkProbabilityDownloader/images/brain_splash.png" height="320" width=100% style="object-fit: cover;">
    </div>
    <div id="div_overlayImage" style="position: absolute; z-index: 1; top:0px; right:10px;">
-      <img class="centerImageXX" title="Version: 0709.war" alt="image not available" src="/NetworkProbabilityDownloader/images/DCAN.png" height="75" width="75">
+      <img class="centerImageXX" title="Version: 0726_B.war" alt="image not available" src="/NetworkProbabilityDownloader/images/DCAN.png" height="75" width="75">
    </div>
    <div id="midb_atlases_text" style="position: absolute; z-index: 1; bottom:10px; right:16px">
             <h3 id="midb_header" style="color:white;">MIDB Probabilistic Atlases </h3> 
@@ -715,18 +715,34 @@ Pronouns: He/His
 
 <div id="midb_footer">
 <hr>
-<br>
+
 <p class="aligncenter">
-<span style="font-style:italic; font-size:14px;">Follow us on Twitter:</span><br><br>
+<span class="aligncenter" style="font-style:italic; font-size:14px; text-align:center;">Follow us on Twitter:</span><br>
 <a href="https://twitter.com/DCANlabs?ref_src=twsrc%5Etfw" target="_blank" class="twitter-follow-button" data-show-count="false">Follow @DCANlabs</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
 <!--
 <a href="https://groups.google.com/d/forum/dcanlab" style="color:#1da1f2;">Mailing list</a>
 -->
 <a href="https://groups.google.com/g/midb-atlas-forum" target="_blank" style="color:#1da1f2;">Mailing list</a>
+<hr>
+<!-- <p class="aligncenter"> -->
+<span style="display:block; text-align:center; font-style:italic; font-size:12px;">
+
+&copy; Copyright 2020-2021, Regents of the University of Minnesota
+<br><u>Copyright & License Notice</u>
+</span>
+<!-- </p>  -->
+<span style="font-style:italic; font-size:12px;">
+The MIDB atlas images and associated files are copyrighted by the Regents of the University of Minnesota. It can be freely used for educational and research purposes by non-profit institutions and US government agencies only. Other organizations are allowed to use The MIDB atlas only and will require prior approval. The images and software may not be sold, reproduced, or redistributed without prior written approval. 
 <br>
-<span style="font-style:italic; font-size:12px;">Website design by Jim Fair
-<br>&copy; Copyright 2020-2021, Jim Fair and Robert Hermosillo.<br>
+As unestablished research software, these files are provided on an "as is'' basis without warranty of any kind, either expressed or implied. The downloading, or usage of any part of this software constitutes an implicit agreement to these terms. These terms and conditions are subject to change at any time without prior notice.
+</span>
+
+<br>
+<hr class="footer">
+<p class="aligncenter">
+
+<span class="aligncenter" style="font-style:italic; font-size:12px;">Website design by Jim Fair
 </span>
 
 </div>
