--- a/NetworkProbabilityDownloader/WebContent/HTML/network_probability_downloader.html
+++ b/NetworkProbabilityDownloader/WebContent/HTML/network_probability_downloader.html
@@ -7,9 +7,9 @@
 <head>
 
   <script src="/NetworkProbabilityDownloader/javascript/jquery.js"></script>
-  <script src="/NetworkProbabilityDownloader/javascript/np_downloader.js?id=.war_0703_2204_2023"></script>
-  <script src="/NetworkProbabilityDownloader/javascript/np_menu.js?id=.war_0703_2204_2023"></script>
-  <script src="/NetworkProbabilityDownloader/javascript/menuTemplates.js?id=.war_0703_2204_2023"></script>
+  <script src="/NetworkProbabilityDownloader/javascript/np_downloader.js?id=1116_02:00_2025.war"></script>
+  <script src="/NetworkProbabilityDownloader/javascript/np_menu.js?id=1116_02:00_2025.war"></script>
+  <script src="/NetworkProbabilityDownloader/javascript/menuTemplates.js?id=1116_02:00_2025.war"></script>
   
   
 
@@ -57,10 +57,10 @@
 <link href='https://fonts.googleapis.com/css?family=Amaranth:ital@1&display=swap' rel='stylesheet'>
 
 
-<link rel="stylesheet" href="/NetworkProbabilityDownloader/css/np_downloader.css?id=.war_0703_2204_2023" media="all" />
-<link rel="stylesheet" href="/NetworkProbabilityDownloader/css/alert.css?id=.war_0703_2204_2023" media="all" />
+<link rel="stylesheet" href="/NetworkProbabilityDownloader/css/np_downloader.css?id=1116_02:00_2025.war" media="all" />
+<link rel="stylesheet" href="/NetworkProbabilityDownloader/css/alert.css?id=1116_02:00_2025.war" media="all" />
 
-<link rel="stylesheet" href="/NetworkProbabilityDownloader/css/menu_generic.css?id=.war_0703_2204_2023" media="all" />
+<link rel="stylesheet" href="/NetworkProbabilityDownloader/css/menu_generic.css?id=1116_02:00_2025.war" media="all" />
 
 
 <!--[if lte IE 8]>
@@ -195,6 +195,7 @@
 <input type="radio" class="tabs_input" name="tabs" id="tab_contactUs" onclick="handleTabSelected(this.id)"  />
 <label id="label_contact" class="tabLabel"  for="tab_contactUs">Contact Us</label>
 </div>
+
 <!--
 <input type="radio" class="tabs_input" name="tabs" id="tab_admin" onclick="handleTabSelected(this.id)"  />
 <label class="tabLabel"  for="tab_contactUs">Admin</label>
@@ -205,7 +206,7 @@
        <img id="img_splashImage"  class="splashImage" alt="image not available" src="/NetworkProbabilityDownloader/images/brain_splash.png" height="320" width=100% style="object-fit: cover;">
    </div>
    <div id="div_overlayImage" style="position: absolute; z-index: 1; top:0px; right:10px;">
-      <img class="centerImageXX" title="Version: .war_0703_2204_2023" alt="image not available" src="/NetworkProbabilityDownloader/images/DCAN.png" height="75" width="75" ondblclick="handleAdminLoginRequest()">
+      <img class="centerImageXX" title="Version: 1116_02:00_2025.war" alt="image not available" src="/NetworkProbabilityDownloader/images/DCAN.png" height="75" width="75" ondblclick="handleAdminLoginRequest()">
    </div>
    <!--
    <div id="midb_atlases_text" style="position: absolute; z-index: 1; bottom:10px; right:16px">
@@ -241,6 +242,12 @@ provide feedback.
 <br>
 <button class="btn_mainMenu" onclick="handleTabSelected('tab_resources')"><img src="/NetworkProbabilityDownloader/images/Neuroatlas_atlas_external.png" height="194" width="345"></img></button>
 <button class="btn_mainMenu" onclick="handleTabSelected('tab_contactUs')"><img src="/NetworkProbabilityDownloader/images/Neuroatlas_atlas_contact.png" height="194" width="345"></img></button>
+
+<hr style="width:60%;height:2px;text-align:center;display:inline-block;">
+<br>
+<textarea id="textarea_datalad" readonly>
+In future releases the MIDB Precision Atlas will be integrated with DataLad. 
+</textarea>
 
 </div>
 
@@ -799,9 +806,9 @@ As unestablished research software, these files are provided on an "as is'' basi
 <div id="div_addStudyHelp">
 <span style="font-size: 20px;font-weight: 700;">Adding A Study</span>
 <ul style="text-align: left;">
-<li> The surface.zip and volume.zip files must contain a specific folder structure for
+<li> The sufrace zip and volume zip files must contain a specific folder structure for
      the add study process to complete successfully.</li>
-<li> Refer to the Add Study doc on how to create a surface.zip or volume.zip file
+<li> Refer to the Add Study doc on how to create a surface zip or volume zip file
      <br>(click the Download Docs button to download the Add Study document)</li>
 <li> The folders.txt file specifies what type of Single Networks are available. It
      specifies the display names and folder names that the data reside in. For more
@@ -813,8 +820,10 @@ As unestablished research software, these files are provided on an "as is'' basi
 <li> After adding a study, refresh the browser page to see the new study menu.</li>
 </ul>
 <br>
-<button id="button_downloadAddStudySample"  class="downloader"  onclick="downloadAdminFile('addStudy_sample.zip')"><img alt="" src="/NetworkProbabilityDownloader/images/button_download_docs_light_grey.png"></img></button>
+<button id="button_downloadAddStudySample"  class="downloader"  onclick="downloadAdminFile('add_study.odt')"><img alt="" src="/NetworkProbabilityDownloader/images/button_download_docs_light_grey.png"></img></button>
+<!--
 <button id="button_downloadSurfaceZip"  class="downloader" title="download surface.zip sample"  onclick="confirmDownloadAdminFile('/midb/test_template_matching_surface.zip')"><img alt="" src="/NetworkProbabilityDownloader/images/button_download_zip.png"></img></button>
+-->
 <button id="button_getServerStorage1"  class="downloader"  onclick="getStorageStats(this)"><img alt="" src="/NetworkProbabilityDownloader/images/button_display_storage.png"></img></button>
 <button id="button_hideAddStudyHelp"  class="downloader"  onclick="hideAddStudyHelp()"><img alt="" src="/NetworkProbabilityDownloader/images/button_dismiss_light_grey.png"></img></button>
 
@@ -830,7 +839,8 @@ As unestablished research software, these files are provided on an "as is'' basi
     <h6 class="uploadHeader" id="uploadZipHeader" style="color: green;">Add Study In Progress...</h6>
     <figure>
     	<img id="img_working" class="img_working" alt="image not available" src="/NetworkProbabilityDownloader/images/giphy.gif" height="50" width="100" style="max-width: 100%; height: auto;">
-    	<figcaption class="ziplist" style="color: green; font-weight: 500;">Unzipping Files On Server<br>And Updating Menu Configs<br>Please Wait<br>(this may take a few minutes)</figcaption>
+    	<figcaption class="ziplist" style="color: green; font-weight: 500;">Unzipping Files On Server<br>And Updating Menu Configs<br>Please Wait<br>(this may take a few minutes)<br>
+    	<span style="color: red; font-weight: 800;">DO NOT CLOSE BROWSER UNTIL COMPLETION MESSAGE RECEIVED</span></figcaption>
     </figure>
 
 </div>
@@ -919,8 +929,10 @@ As unestablished research software, these files are provided on an "as is'' basi
       <option value="addSurfaceData" class="updateOption">add/update surface data</option>
       <option value="addVolumeData" class="updateOption">add/update volume data</option>
       <option value="updateSummary" class="updateOption">update summary</option>
+      <!--
       <option value="addStudyPrefixToSurface" class="updateOption">add study prefix to surface data files</option>
       <option value="addStudyPrefixToVolume" class="updateOption">add study prefix to volume data files</option>
+      -->
       </select>
   </td>
   </tr>
@@ -1280,6 +1292,8 @@ As unestablished research software, these files are provided on an "as is'' basi
   <option value="MIDB_FTP">SMS Sender Telephone</option>
   <option value="MIDB_TAC">Twilio account SID</option> 
   <option value="MIDB_TAU">Twilio authentication token</option>
+  <option value="RELEASE_STUDY_MAINTENANCE_LOCK">Reset Study Maintenance Lock</option>
+  
 </select> 
 </td>
 </tr>
@@ -1356,7 +1370,8 @@ As unestablished research software, these files are provided on an "as is'' basi
 
 <ul class="menu" id="ul_atlasMenu" style="position:relative; z-index:99;"> <!-- STUB BEGIN -->
 
-  <li class="menu" style="width: 200px;"><a class="menu" onmouseout="mouseOut(this)" onmouseover="showSubmenuLevel_1()">Select Study/Atlas</a> 
+  <li class="menu" style="width: 200px;"><a class="menu" onmouseout="mouseOut(this)" onmouseover="showSubmenuLevel_1()">
+  Select Study/Atlas <img id="img_dropdown" alt="" src="/NetworkProbabilityDownloader/images/dropdown.png"></a> 
 
       <ul class="submenu" id="ul_submenu">  <!-- STUB END -->
         
@@ -1372,7 +1387,7 @@ As unestablished research software, these files are provided on an "as is'' basi
    <h6 class="centerROI_imageHeading" id="roi_image_header">Network Probabilistic Map <br>(Dataset Release V.1.0)</h6>
    <img id="img_networkMap" class="centerImage" src="/NetworkProbabilityDownloader/images/DCAN.png" height="225" width="300" style="border:2px solid #555; max-width:100%;">
    <br>
-   <p style="text-align:center">&nbsp; &nbsp; &nbsp;<button id="button_downloadNetworkDscalar"  class="downloader"  onclick="preprocessDownloadFile(2)"><span>download dscalar.nii for<br>selected atlas/network</span><img alt="" src="/NetworkProbabilityDownloader/images/btn_dload_dscalar.png"></img></button></p>
+   <p style="text-align:center">&nbsp; &nbsp; &nbsp;<button id="button_downloadNetworkDscalar"  class="downloader"  onclick="preprocessDownloadFile(2)"><img alt="" src="/NetworkProbabilityDownloader/images/btn_dload_dscalar.png"></img></button></p>
    
 </div>
 
@@ -1459,7 +1474,7 @@ As unestablished research software, these files are provided on an "as is'' basi
    <br>
    
    
-   <label class="tip_selectThreshold"><span style="font-weight: normal;color:black;">You can change the value by moving the slider with the cursor keys (<,>) or the mouse. Alternatively, you can enter a new value in the 'Selected Threshold Value' box</span>
+   <label class="tip_selectThreshold"><span style="font-weight: normal;color:black;">You can change the value by moving the slider with the cursor keys (< >) or the mouse. Alternatively, you can enter a new value in the 'Selected Threshold Value' box</span>
           <img src="/NetworkProbabilityDownloader/images/help.png" alt="help" width="25" height="25"></label>
    <p style="text-align:center">
    <label class="selectThreshold" style="font-weight: bold;">Select Threshold</label>
